--- a/sarevokfriendship/sarevokfriendship.ini
+++ b/sarevokfriendship/sarevokfriendship.ini
@@ -18,10 +18,10 @@ Author = Aeryn
 Description = One of the things many find sorely lacking in the Bioware NPCs are the more complex relationships presented by modern NPC mods--especially in regards to "friendships", the relationships NPCs have with the PC when not romancing them. This mod adds a series of dialogues with Sarevok, the PC's brother, expanding on Sarevok's experiences and struggles (ToB, BGT, BGII:EE, EET).
 
 # Web address of mod readme file (filename is case-sensitive!)
-Readme = http://spellholdstudios.github.io/SpellholdStudios.github.io/readmes/sarevokfrienship-readme-english.html, http://spellholdstudios.github.io/SpellholdStudios.github.io/readmes/sarevokfrienship-readme-%LANGUAGE%.html
+Readme = http://spellholdstudios.github.io/readmes/sarevokfrienship-readme-english.html, http://spellholdstudios.github.io/readmes/sarevokfrienship-readme-%LANGUAGE%.html
 
 # Web address of mod dedicated forum or forum thread 
-Forum = http://www.shsforums.net/index.php?showforum=555
+Forum = http://www.shsforums.net/topic/55704-sarevok-friendship/
 
 # Web address of mod personal Homepage, no need to duplicate with mod dedicated forum
 Homepage = http://www.spellholdstudios.net/ie/npciep
